blank done, s2g ready for wss

--- a/s2g/s2g/index.html
+++ b/s2g/s2g/index.html
@@ -13,5 +13,5 @@
   </head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="main.bb552977cc5ba10c0d10.js"></script></body>
+  <script type="text/javascript" src="vendor.1cfebf2675bbb27f852f.js"></script><script type="text/javascript" src="main.1cfebf2675bbb27f852f.js"></script></body>
 </html>
