--- a/s2g/src/index.html
+++ b/s2g/src/index.html
@@ -13,5 +13,5 @@
   </head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="main.bb552977cc5ba10c0d10.js"></script></body>
+  </body>
 </html>
