--- a/s2g/src/index.html
+++ b/s2g/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Blank</title>
+    <title>s2g</title>
     <meta name="description" content="">
     <link rel="shortcut icon" type="image/png" href="sbs.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
