--- a/s2g/s2g/index.html
+++ b/s2g/s2g/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Blank</title>
+    <title>s2g</title>
     <meta name="description" content="">
     <link rel="shortcut icon" type="image/png" href="sbs.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -13,5 +13,5 @@
   </head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="vendor.1cfebf2675bbb27f852f.js"></script><script type="text/javascript" src="main.1cfebf2675bbb27f852f.js"></script></body>
+  <script type="text/javascript" src="vendor.c004f6256ce224acf6a0.js"></script><script type="text/javascript" src="main.c004f6256ce224acf6a0.js"></script></body>
 </html>
